# qupulse-mfli

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythontest.yaml
examples/: zurich_instruments_lockin_mfli_daq.ipynb
examples/.ipynb_checkpoints/: zurich_instruments_lockin_mfli_daq-checkpoint.ipynb
qupulse-mfli/: __init__.py  mfli.py
qupulse_mfli/: downsample_test.py  mfli.py  numpy_magic.py
qupulse_mfli/qpmfli_downsample_rust/: Cargo.toml  Cargo.toml.bak  pyproject.toml
qupulse_mfli/qpmfli_downsample_rust/src/: lib.rs  lib.rs.bak
tests/: mock_api.py  numpy_magic_test.py  test_numpy_magic.py  test_pollthread.py
