[metadata]
name = qupulse-mfli
long_description = file: README.md
long_description_content_type = text/markdown
author = Quantum Technology Group and Chair of Software Engineering, RWTH Aachen University
license = MIT
license_files = LICENSE
keywords = quantum, physics, control pulse, qubit
classifiers =
          Programming Language :: Python :: 3
          License :: OSI Approved :: MIT License
          Operating System :: OS Independent
          Topic :: Scientific/Engineering
          Intended Audience :: Science/Research

[options]
packages = find:
package_dir =
    qupulse-mfli=qupulse-mfli
python_requires = >=3.8
install_requires =
    qupulse
    numpy
    xarray